--- a/index.html
+++ b/index.html
@@ -1165,7 +1165,7 @@ if (typeof jQuery != 'undefined') {
         </div>
         <div id="chatbot-messages" class="chatbot-messages">
             <div class="chatbot-message bot">
-                Hello! I'm here to help with your accounting needs. What can I assist you with today?
+                Hello! I'm MG Assistant, your virtual guide to MG Accounting. How can I help you with your tax or accounting questions today?
             </div>
         </div>
         <div class="chatbot-input-container">
