--- a/backup/index.html
+++ b/backup/index.html
@@ -257,8 +257,8 @@
 <!-- end header -->
 
 <section id="home" class="no-padding no-transition parallax-hero">
-    <h1 aria-hidden="false" style="font-size:2rem; font-weight:700; color:#232323; text-align:center; margin-top:30px;">MG Accounting Melbourne - Professional Tax Accountants & Business Advisors in Oakleigh</h1>
-    <h2 aria-hidden="false" style="font-size:1.5rem; font-weight:500; color:#232323; text-align:center;">Expert Tax Accountants, Business Advisors & Financial Planners in Melbourne</h2>
+    <h1 class="display-none" aria-hidden="true">MG Accounting Melbourne - Professional Tax Accountants & Business Advisors in Oakleigh</h1>
+    <h2 class="display-none" aria-hidden="true">Expert Tax Accountants, Business Advisors & Financial Planners in Melbourne</h2>
     <div id="rev_slider_5_1_wrapper" class="rev_slider_wrapper fullscreen-container no-transition" data-alias="reone-1" data-source="gallery" style="background:transparent;padding:0px;">
         <!-- Add data-parallax attribute -->
         <div id="rev_slider_5_1" class="rev_slider fullscreenbanner" style="display:none;" data-version="5.4.5" data-parallax="10">
