Fix: Move Mistral API call to Vercel serverless function and update chatbot frontend to use secure proxy

--- a/backup/index.html
+++ b/backup/index.html
@@ -257,8 +257,6 @@
 <!-- end header -->
 
 <section id="home" class="no-padding no-transition parallax-hero">
-    <h1 class="display-none" aria-hidden="true">MG Accounting Melbourne - Professional Tax Accountants & Business Advisors in Oakleigh</h1>
-    <h2 class="display-none" aria-hidden="true">Expert Tax Accountants, Business Advisors & Financial Planners in Melbourne</h2>
     <div id="rev_slider_5_1_wrapper" class="rev_slider_wrapper fullscreen-container no-transition" data-alias="reone-1" data-source="gallery" style="background:transparent;padding:0px;">
         <!-- Add data-parallax attribute -->
         <div id="rev_slider_5_1" class="rev_slider fullscreenbanner" style="display:none;" data-version="5.4.5" data-parallax="10">
@@ -267,30 +265,14 @@
                     <!-- Add data-bgparallax attribute to the background image -->
                     <img src="images/cover2.jpg" alt="MG Accounting Melbourne Office - Professional Tax Accountants in Oakleigh" data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" data-bgparallax="10" class="rev-slidebg" data-no-retina>
                     <!-- LAYERS -->
-
-                    <!-- LAYER NR. 15 -->
-                    <div class="tp-caption   tp-resizeme"
-                         id="slide-67-layer-2"
-                         data-x="['center','center','center','center']" data-hoffset="['1','1','0','0']"
-                         data-y="['middle','middle','middle','middle']" data-voffset="['-70','-70','-70','-70']"
-                         data-fontsize="['90','90','70','50']"
-                         data-lineheight="['90','90','70','50']"
-                         data-width="['none','none','481','360']"
-                         data-height="none"
-                         data-whitespace="['nowrap','nowrap','normal','normal']"
-
-                         data-type="text"
-                         data-responsive_offset="on"
-
-                         data-frames='[{"delay":1000,"speed":2000,"frame":"0","from":"sX:0.9;sY:0.9;opacity:0;fb:20px;","to":"o:1;fb:0;","ease":"Power3.easeInOut"},{"delay":"wait","speed":500,"frame":"999","to":"sX:0.9;sY:0.9;opacity:0;fb:20px;","ease":"Power3.easeInOut"}]'
-                         data-textAlign="['center','center','center','center']"
-                         data-paddingtop="[0,0,0,0]"
-                         data-paddingright="[0,0,0,0]"
-                         data-paddingbottom="[0,0,0,0]"
-                         data-paddingleft="[0,0,0,0]"
-
-                         style="z-index: 19; white-space: nowrap; font-size: 90px; line-height: 90px; font-weight: 500; color: #272727; letter-spacing: -5px;font-family:'Poppins', sans-serif;">Welcome to<br/>
-                        <span class="text-red">MG</span> Accounting. </div>
+                    <div class="tp-caption tp-resizeme" style="z-index: 19; white-space: nowrap; text-align: center; width: 100%; top: 0; left: 0;">
+                        <h1 style="font-size: 90px; color: #fff; font-weight: 700; text-shadow: 0 2px 8px rgba(0,0,0,0.3);">
+                            MG Accounting Melbourne - Professional Tax Accountants & Business Advisors in Oakleigh
+                        </h1>
+                        <h2 style="font-size: 30px; color: #fff; font-weight: 400; margin-top: 20px; text-shadow: 0 2px 8px rgba(0,0,0,0.3);">
+                            Expert Tax Accountants, Business Advisors & Financial Planners in Melbourne
+                        </h2>
+                    </div>
 
                     <!-- LAYER NR. 16 -->
                     <div class="tp-caption   tp-resizeme"
