--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <link rel="canonical" href="https://www.mgaccounting.com.au">
     
     <!-- favicon -->
-    <link rel="icon" href="favicon.png">
+    <link rel="icon" href="images/favicon.png">
     
     <!-- animation -->
     <link rel="stylesheet" href="css/animate.min.css"/>
