Remove unwanted hero text captions from homepage slider

--- a/index.html
+++ b/index.html
@@ -267,54 +267,7 @@
                     <!-- Add data-bgparallax attribute to the background image -->
                     <img src="images/cover2.jpg" alt="MG Accounting Melbourne Office - Professional Tax Accountants in Oakleigh" data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" data-bgparallax="10" class="rev-slidebg" data-no-retina>
                     <!-- LAYERS -->
-
-                    <!-- LAYER NR. 15 -->
-                    <div class="tp-caption   tp-resizeme"
-                         id="slide-67-layer-2"
-                         data-x="['center','center','center','center']" data-hoffset="['1','1','0','0']"
-                         data-y="['middle','middle','middle','middle']" data-voffset="['-70','-70','-70','-70']"
-                         data-fontsize="['90','90','70','50']"
-                         data-lineheight="['90','90','70','50']"
-                         data-width="['none','none','481','360']"
-                         data-height="none"
-                         data-whitespace="['nowrap','nowrap','normal','normal']"
-
-                         data-type="text"
-                         data-responsive_offset="on"
-
-                         data-frames='[{"delay":1000,"speed":2000,"frame":"0","from":"sX:0.9;sY:0.9;opacity:0;fb:20px;","to":"o:1;fb:0;","ease":"Power3.easeInOut"},{"delay":"wait","speed":500,"frame":"999","to":"sX:0.9;sY:0.9;opacity:0;fb:20px;","ease":"Power3.easeInOut"}]'
-                         data-textAlign="['center','center','center','center']"
-                         data-paddingtop="[0,0,0,0]"
-                         data-paddingright="[0,0,0,0]"
-                         data-paddingbottom="[0,0,0,0]"
-                         data-paddingleft="[0,0,0,0]"
-
-                         style="z-index: 19; white-space: nowrap; font-size: 90px; line-height: 90px; font-weight: 500; color: #272727; letter-spacing: -5px;font-family:'Poppins', sans-serif;">Welcome to<br/>
-                        <span class="text-red">MG</span> Accounting. </div>
-
-                    <!-- LAYER NR. 16 -->
-                    <div class="tp-caption   tp-resizeme"
-                         id="slide-67-layer-3"
-                         data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']"
-                         data-y="['middle','middle','middle','middle']" data-voffset="['90','90','60','30']"
-                         data-fontsize="['25','25','25','20']"
-                         data-lineheight="['35','35','35','30']"
-                         data-width="['480','480','480','360']"
-                         data-height="none"
-                         data-whitespace="normal"
-
-                         data-type="text"
-                         data-responsive_offset="on"
-
-                         data-frames='[{"delay":1000,"speed":2000,"frame":"0","from":"sX:0.9;sY:0.9;opacity:0;fb:20px;","to":"o:1;fb:0;","ease":"Power3.easeInOut"},{"delay":"wait","speed":500,"frame":"999","to":"sX:0.9;sY:0.9;opacity:0;fb:20px;","ease":"Power3.easeInOut"}]'
-                         data-textAlign="['center','center','center','center']"
-                         data-paddingtop="[0,0,0,0]"
-                         data-paddingright="[0,0,0,0]"
-                         data-paddingbottom="[0,0,0,0]"
-                         data-paddingleft="[0,0,0,0]"
-
-                         style="z-index: 20; min-width: 480px; max-width: 480px; white-space: normal; font-size: 25px; line-height: 35px; font-weight: 400; color: #272727; letter-spacing: 0px;font-family:'Poppins', sans-serif;">Financial Peace of Mind</div>
-
+                    <!-- Removed text captions here -->
                     <!-- LAYER NR. 17 -->
                     <div class="tp-caption rev-btn tp-resizeme"
                          id="slide-67-layer-7"
