Restore hero section with Welcome to MG Accounting and Financial Peace of Mind text

--- a/index.html
+++ b/index.html
@@ -265,21 +265,12 @@
                     <!-- Add data-bgparallax attribute to the background image -->
                     <img src="images/cover2.jpg" alt="MG Accounting Melbourne Office - Professional Tax Accountants in Oakleigh" data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" data-bgparallax="10" class="rev-slidebg" data-no-retina>
                     <!-- LAYERS -->
-                    <!-- Removed text captions here -->
-                    <!-- LAYER NR. 17 -->
-                    <div class="tp-caption rev-btn tp-resizeme"
-                         id="slide-67-layer-7"
-                         data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']"
-                         data-y="['middle','middle','middle','middle']" data-voffset="['200','200','160','120']"
-                         data-width="250"
-                         data-height="none"
-                         data-whitespace="nowrap"
-                         data-type="button"
-                         data-actions=''
-                         data-responsive_offset="on"
-                         data-frames='[{"delay":1000,"speed":2000,"frame":"0","from":"sX:0.9;sY:0.9;opacity:0;fb:20px;","to":"o:1;fb:0;","ease":"Power3.easeInOut"},{"delay":"wait","speed":500,"frame":"999","to":"sX:0.9;sY:0.9;opacity:0;fb:20px;","ease":"Power3.easeInOut"},{"frame":"hover","speed":"0","ease":"Linear.easeNone","to":"o:1;rX:0;rY:0;rZ:0;z:0;fb:0;","style":"c:rgba(255,255,255,1);bs:solid;bw:0 0 0 0;"}]'
-                         data-textAlign="['center','center','center','center']"
-                         style="z-index: 21"><a href="#contact" class="btn btn-blue btn-hvr-red btn-rounded btn-large scroll">Contact Us</a>
+                    <div class="hero-content" style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); text-align: center; width: 100%; z-index: 20;">
+                        <h1 style="font-size: 64px; font-weight: 700; color: #222; letter-spacing: -2px; margin-bottom: 20px; font-family: 'Poppins', sans-serif;">
+                            Welcome to <span style="color: #CB342C;">MG</span> Accounting.
+                        </h1>
+                        <h2 style="font-size: 28px; font-weight: 400; color: #222; margin-bottom: 40px; font-family: 'Poppins', sans-serif;">Financial Peace of Mind</h2>
+                        <a href="#contact" class="btn btn-red btn-rounded btn-large scroll" style="font-size: 18px; padding: 12px 40px;">Contact Us</a>
                     </div>
                 </li>
             </ul>
