Restore hero section to match backup: Revolution Slider headings, subtitle, and button structure

--- a/index.html
+++ b/index.html
@@ -265,16 +265,49 @@
                     <!-- Add data-bgparallax attribute to the background image -->
                     <img src="images/cover2.jpg" alt="MG Accounting Melbourne Office - Professional Tax Accountants in Oakleigh" data-bgposition="center center" data-bgfit="cover" data-bgrepeat="no-repeat" data-bgparallax="10" class="rev-slidebg" data-no-retina>
                     <!-- LAYERS -->
-                    <div class="hero-content" style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); text-align: center; width: 100%; z-index: 20;">
-                        <h1 style="font-size: 64px; font-weight: 700; color: #222; letter-spacing: -2px; margin-bottom: 20px; font-family: 'Poppins', sans-serif;">
-                            Welcome to <span style="color: #CB342C;">MG</span> Accounting.
+                    <div class="tp-caption tp-resizeme" style="z-index: 19; white-space: nowrap; text-align: center; width: 100%; top: 0; left: 0;">
+                        <h1 style="font-size: 90px; color: #fff; font-weight: 700; text-shadow: 0 2px 8px rgba(0,0,0,0.3);">
+                            MG Accounting Melbourne - Professional Tax Accountants & Business Advisors in Oakleigh
                         </h1>
-                        <h2 style="font-size: 28px; font-weight: 400; color: #222; margin-bottom: 40px; font-family: 'Poppins', sans-serif;">Financial Peace of Mind</h2>
-                        <a href="#contact" class="btn btn-red btn-rounded btn-large scroll" style="font-size: 18px; padding: 12px 40px;">Contact Us</a>
+                        <h2 style="font-size: 30px; color: #fff; font-weight: 400; margin-top: 20px; text-shadow: 0 2px 8px rgba(0,0,0,0.3);">
+                            Expert Tax Accountants, Business Advisors & Financial Planners in Melbourne
+                        </h2>
+                    </div>
+                    <div class="tp-caption   tp-resizeme"
+                         id="slide-67-layer-3"
+                         data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']"
+                         data-y="['middle','middle','middle','middle']" data-voffset="['90','90','60','30']"
+                         data-fontsize="['25','25','25','20']"
+                         data-lineheight="['35','35','35','30']"
+                         data-width="['480','480','480','360']"
+                         data-height="none"
+                         data-whitespace="normal"
+                         data-type="text"
+                         data-responsive_offset="on"
+                         data-frames='[{"delay":1000,"speed":2000,"frame":"0","from":"sX:0.9;sY:0.9;opacity:0;fb:20px;","to":"o:1;fb:0;","ease":"Power3.easeInOut"},{"delay":"wait","speed":500,"frame":"999","to":"sX:0.9;sY:0.9;opacity:0;fb:20px;","ease":"Power3.easeInOut"}]'
+                         data-textAlign="['center','center','center','center']"
+                         data-paddingtop="[0,0,0,0]"
+                         data-paddingright="[0,0,0,0]"
+                         data-paddingbottom="[0,0,0,0]"
+                         data-paddingleft="[0,0,0,0]"
+                         style="z-index: 20; min-width: 480px; max-width: 480px; white-space: normal; font-size: 25px; line-height: 35px; font-weight: 400; color: #272727; letter-spacing: 0px;font-family:'Poppins', sans-serif;">Financial Peace of Mind</div>
+                    <div class="tp-caption rev-btn tp-resizeme"
+                         id="slide-67-layer-7"
+                         data-x="['center','center','center','center']" data-hoffset="['0','0','0','0']"
+                         data-y="['middle','middle','middle','middle']" data-voffset="['200','200','160','120']"
+                         data-width="250"
+                         data-height="none"
+                         data-whitespace="nowrap"
+                         data-type="button"
+                         data-actions=''
+                         data-responsive_offset="on"
+                         data-frames='[{"delay":1000,"speed":2000,"frame":"0","from":"sX:0.9;sY:0.9;opacity:0;fb:20px;","to":"o:1;fb:0;","ease":"Power3.easeInOut"},{"delay":"wait","speed":500,"frame":"999","to":"sX:0.9;sY:0.9;opacity:0;fb:20px;","ease":"Power3.easeInOut"},{"frame":"hover","speed":"0","ease":"Linear.easeNone","to":"o:1;rX:0;rY:0;rZ:0;z:0;fb:0;","style":"c:rgba(255,255,255,1);bs:solid;bw:0 0 0 0;"}]'
+                         data-textAlign="['center','center','center','center']"
+                         style="z-index: 21"><a href="#contact" class="btn btn-blue btn-hvr-red btn-rounded btn-large scroll">Contact Us</a>
                     </div>
                 </li>
             </ul>
-            <div class="tp-bannertimer tp-bottom" style="visibility: hidden !important;"></div>	</div>
+            <div class="tp-bannertimer tp-bottom" style="visibility: hidden !important;"></div>    </div>
     </div><!-- END REVOLUTION SLIDER -->
 </section>
 
@@ -445,12 +478,9 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-xs-12 text-center center-col">
-                            <h4 class="area-title alt-font text-white margin-20px-bottom font-weight-300 sm-width-100 xs-width-100 wow zoomIn" data-wow-delay="0.3s" style="font-family: 'Poppins', sans-serif;">
-                                Expert <span class="text-red font-weight-700" style="color: #CB342C !important;">Tax Accountants</span> in <span class="text-red font-weight-700" style="color: #CB342C !important;">Melbourne</span>
+                            <h4 class="area-title alt-font text-white margin-20px-bottom font-weight-300 sm-width-100 xs-width-100 wow swing" data-wow-delay="0.3s" style="font-family: 'Poppins', sans-serif;">
+                                We <span class="text-red font-weight-700" style="color: #CB342C !important;">love</span> what we do<br>&amp; we do it with <span class="text-red font-weight-700" style="color: #CB342C !important;">passion!</span>
                             </h4>
-                            <p class="text-capitalize alt-font text-white margin-30px-bottom font-weight-300 sm-width-100 xs-width-100 wow fadeInUp" data-wow-delay="0.5s" style="font-family: 'Poppins', sans-serif; font-size: 24px;">
-                                Ready to Transform Your Financial Future?</p>
-                            <a href="#" class="btn btn-rounded btn-white btn-hvr-red btn-large wow tada" data-wow-delay="0.7s" data-toggle="modal" data-target="#consultationModal" onclick="$('#consultationModal').modal('show'); return false;">Schedule a Consultation</a>
                         </div>
                     </div>
                 </div>
